--- a/src/backend/RateIdeas.Infrastructure/RateIdeas.Infrastructure.csproj
+++ b/src/backend/RateIdeas.Infrastructure/RateIdeas.Infrastructure.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\RateIdeas.Application\RateIdeas.Application.csproj" />
     <ProjectReference Include="..\RateIdeas.Domain\RateIdeas.Domain.csproj" />
   </ItemGroup>
 
