--- a/src/backend/RateIdeas.Application/RateIdeas.Application.csproj
+++ b/src/backend/RateIdeas.Application/RateIdeas.Application.csproj
@@ -14,6 +14,7 @@
     <Folder Include="Comments\" />
     <Folder Include="CommentVotes\" />
     <Folder Include="IdeaVotes\" />
+    <Folder Include="SavedIdeas\" />
   </ItemGroup>
 
   <ItemGroup>
