--- a/src/backend/RateIdeas.WebApi/RateIdeas.WebApi.csproj
+++ b/src/backend/RateIdeas.WebApi/RateIdeas.WebApi.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <ProjectReference Include="..\RateIdeas.Application\RateIdeas.Application.csproj" />
   </ItemGroup>
 
 </Project>
