--- a/src/backend/RateIdeas.WebApi/RateIdeas.WebApi.csproj
+++ b/src/backend/RateIdeas.WebApi/RateIdeas.WebApi.csproj
@@ -7,11 +7,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.7">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.7">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\RateIdeas.Application\RateIdeas.Application.csproj" />
+    <ProjectReference Include="..\RateIdeas.Infrastructure\RateIdeas.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
