💡 Implemented Idea Services

--- a/src/backend/RateIdeas.WebApi/RateIdeas.WebApi.csproj
+++ b/src/backend/RateIdeas.WebApi/RateIdeas.WebApi.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\RateIdeas.Infrastructure\RateIdeas.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
 </Project>
