🔑 Configured auth service

--- a/src/backend/RateIdeas.WebApi/appsettings.json
+++ b/src/backend/RateIdeas.WebApi/appsettings.json
@@ -5,6 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "JWT": {
+    "Key": "548b1c83-abb3-4d73-bef4-db734fdcbe59",
+    "Issuer": "https://idea-up.uz",
+    "Audience": "RateIdea community"
+  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "host=localhost; uid=postgres; password=root; database=RateIdeaDb;"
