--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -46,3 +46,23 @@ jobs:
       run: |
         docker build --tag $DOCKER_USERNAME/$PROJECT-api --file ./src/backend/RateIdeas.WebApi/Dockerfile .
         docker push $DOCKER_USERNAME/$PROJECT-api
+
+  deploy:
+    name: Deploy
+    needs:
+      - dockerize-api
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: SSH into AWS Ubuntu Server
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SSH_KEY }}
+          port: ${{ secrets.PORT }}
+          script: |
+            cd ~/app
+            docker-compose pull
+            docker rmi $(docker images --quiet --filter dangling=true)
+            docker-compose up --detach
