--- a/src/backend/RateIdeas.WebApi/appsettings.json
+++ b/src/backend/RateIdeas.WebApi/appsettings.json
@@ -13,5 +13,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "host=localhost; uid=postgres; password=root; database=RateIdeaDb;"
+  },
+  "EmailConfigurations": {
+    "Email": "qodirovabdurahmon46@gmail.com",
+    "Password": "lthboacjvcndustk",
+    "Host": "smtp.gmail.com",
+    "DisplayName": "Rate Ideas",
+    "Port": 587
   }
 }
